--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -5,14 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SimpleLightbox library</title>
-    <link
-      rel="stylesheet"
-      href="../node_modules/simplelightbox/dist/simple-lightbox.min.css"
-    />
-    <script
-      src="../node_modules/simplelightbox/dist/simple-lightbox.min.js"
-      type="module"
-    ></script>
+    <style>
+      @import '../../node_modules/simplelightbox/dist/simple-lightbox.min.css';
+    </style>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/01-gallery.css" />
   </head>
