--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SimpleLightbox library</title>
     <style>
-      @import '../../node_modules/simplelightbox/dist/simple-lightbox.min.css';
+      @import '../node_modules/simplelightbox/dist/simple-lightbox.min.css';
     </style>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/01-gallery.css" />
